Fixed images out of container

--- a/src/PortfolioCard.sass
+++ b/src/PortfolioCard.sass
@@ -30,10 +30,12 @@
                 padding: 5px
         .img-container
             overflow: hidden
-            height: 200px
+            $img_height: 200px
+            height: $img_height
             img
                 transition: transform .5s
                 object-fit: cover
+                min-height: $img_height
                 &:hover
                     transform: scale(1.5)
 
